--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
                         <div class="left-converter">
                             <div class="left text">У меня есть </div>
                             <div class="left cari">
-                                <button class="active1">RUB</button>
-                                <button>USD</button>
-                                <button>EUR</button>
-                                <button>GBP</button>
+                                <button class="active">RUB</button>
+                                <button class="active1">USD</button>
+                                <button class="active2">EUR</button>
+                                <button class="active3">GBP</button>
                             </div>
                             <div class="input-text">
                                 <input type="text" class="inp-left" placeholder="Add value">
-                                <p class="p-left"></p>
+                                <p class="p-left">1 RUB = 0,0135 USD</p>
                             </div>
                         </div>
                         <div class="right-converter">
                             <div class="right text">Хочу приобрести</div>
                             <div class="right cari">
-                                <button>RUB</button>
+                                <button class="active1">RUB</button>
                                 <button class="active">USD</button>
-                                <button>EUR</button>
-                                <button>GBP</button>
+                                <button class="active2">EUR</button>
+                                <button class="active3">GBP</button>
                             </div>
-                            <div class="input-text2">
+                            <div class="input-text">
                                 <input type="text" class="inp-right" placeholder="Add value">
-                                <p class="p-right"></p>
+                                <p class="p-right">1 USD = 73.8896 RUB</p>
                             </div>
                         </div>
                     </div>
