--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
                     <div class="down-side">Конвертер валют онлайн</div>
                     <div class="converter-div">
                         <div class="left-converter">
-                            <div class="left text">У меня есть </div>
-                            <div class="left cari">
-                                <button class="active">RUB</button>
+                            <div class="text">У меня есть </div>
+                            <div class="left-cari">
+                                <button class="active0 curr-active">RUB</button>
                                 <button class="active1">USD</button>
                                 <button class="active2">EUR</button>
                                 <button class="active3">GBP</button>
                             </div>
                             <div class="input-text">
                                 <input type="text" class="inp-left" placeholder="Add value">
-                                <p class="p-left">1 RUB = 0,0135 USD</p>
+                                <p class="p-left">1 RUB = </p>
                             </div>
                         </div>
                         <div class="right-converter">
-                            <div class="right text">Хочу приобрести</div>
-                            <div class="right cari">
-                                <button class="active1">RUB</button>
-                                <button class="active">USD</button>
+                            <div class="text">Хочу приобрести</div>
+                            <div class="right-cari">
+                                <button class="active0">RUB</button>
+                                <button class="active1 curr-active">USD</button>
                                 <button class="active2">EUR</button>
                                 <button class="active3">GBP</button>
                             </div>
                             <div class="input-text">
                                 <input type="text" class="inp-right" placeholder="Add value">
-                                <p class="p-right">1 USD = 73.8896 RUB</p>
+                                <p class="p-right">1 USD = </p>
                             </div>
                         </div>
                     </div>
@@ -61,6 +61,6 @@
             
         </div>
     </div>
-    
+    <script src ="main.js"></script>
 </body>
 </html>
